[project]
name = "databricks-notebook-test"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    # プロジェクト固有（DBR にないもの）
    "httpx",
]

[dependency-groups]
dev = [
    "jupyter-databricks-kernel",
    "jupyterlab",
    "nbclient",
    "nbstripout",
    "pytest",
    "ruff",
]
dbr = [
    # DBR 17.3 LTS プリインストール済み（ローカルで型チェック等に使用）
    # https://docs.databricks.com/aws/en/release-notes/runtime/17.3lts
    "pandas==2.2.3",
    "numpy==2.1.3",
    "pyspark==4.0.0",
]

# [tool.uv.sources]
# jupyter-databricks-kernel = { path = "../jupyter-databricks-kernel", editable = true }

[tool.jupyter-databricks-kernel.sync]
enabled = true
source = "."
use_gitignore = true

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["F821"]
"notebooks/*.py" = ["F821"]
