[project]
name = "databricks-notebook-test"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    # Project-specific (not included in DBR)
    "httpx",
]

[project.optional-dependencies]
dbr-17-3 = [
    # DBR 17.3 LTS preinstalled packages
    # https://docs.databricks.com/aws/en/release-notes/runtime/17.3lts
    #
    # Purpose:
    # - Used for dependency resolution in uv.lock (not installed by uv sync)
    # - Ensures compatibility with Databricks Runtime environment
    # - Excluded from Renovate updates via matchDepTypes in renovate.json
    "matplotlib==3.10.0",
    "mlflow-skinny==3.0.1",
    "numpy==2.1.3",
    "pandas==2.2.3",
    "pyarrow==19.0.1",
    "pyspark==4.0.0",
    "scikit-learn==1.6.1",
    "scipy==1.15.1",
]

[dependency-groups]
dev = [
    "jupyter-databricks-kernel",
    "jupyterlab",
    "marimo",
    "nbclient",
    "nbstripout",
    "pytest",
    "ruff",
]

# [tool.uv.sources]
# jupyter-databricks-kernel = { path = "../jupyter-databricks-kernel", editable = true }

[tool.jupyter-databricks-kernel.sync]
enabled = true
source = "."
use_gitignore = true

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["F821"]
"notebooks/*.py" = ["F821"]
"marimo/*.py" = ["F821", "B018"]  # B018: marimo uses bare expressions for cell output
